started on recommend modal - added fix for scrollbars in modals when not needed

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -47,5 +47,7 @@ ion-header .toolbar {
     }
    }
   
-
+   .scroll-content {
+    overflow-y: auto !important;
+ }
    
